--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
 
   <script src="modoOscuro.js"></script>
 
-<title>CONJUGATEUR</title>
+<title>CONJUGUEUR</title>
 
 <style>
   </style>
 
 </head>
 <body>
+
+  <div  id="menu">
+    <ul>
+      <li><a href="#verve_container">Conjugueur</a></li>
+      <li><a href="#voyelle_container">Voyelles</a></li>
+      <li><a href="#">VPlus</a></li>
+    </ul>
+
+  </div>
+
+
+  <div id="verve_container" class="verbesContainer" >
 
   <div class="dark-mode-switch">
     <label class="switch">
@@ -30,6 +42,8 @@
   
 
   <h1>Conjugaison du verbe <span id="verbe"></span></h1>
+
+
 
   <div id="comboVerbes">
     
@@ -104,6 +118,21 @@
     </div>
   </div>
 
+
+</div>
+
+
+<div id="voyelle_container">
+
+    <div id="tableau">
+
+      <div id="voyelle">OI = UA</div>
+
+
+    </div>
+
+
+</div>
   
   <script>
 document.addEventListener('DOMContentLoaded', function() {
@@ -152,6 +181,20 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 });
+
+
+/*  SCROLL LENTO*/
+
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
+        });
+    });
+});
+
 
 
 
